Reverted js and fixed navbar width on mobile

--- a/css/input.css
+++ b/css/input.css
@@ -8,10 +8,10 @@
 
 @layer components {
   .sticky-nav {
-    @apply absolute top-full z-50 flex h-20 min-w-[100vw] items-stretch justify-center border-t shadow shadow-transparent backdrop-blur backdrop-grayscale backdrop-brightness-50;
+    @apply absolute top-full z-50 flex h-20 min-w-full items-stretch justify-center border-t shadow shadow-transparent backdrop-blur backdrop-grayscale backdrop-brightness-50;
   }
   .sticky-nav a {
-    @apply flex w-36 items-center justify-center px-8 font-inter text-white transition-all duration-200;
+    @apply flex items-center justify-center px-8 font-inter text-white transition-all duration-200;
   }
   .stuck {
     @apply fixed left-0 top-0 border-b border-t-0;
